--- a/src/main/resources/egovframework/egovProps/globals.properties
+++ b/src/main/resources/egovframework/egovProps/globals.properties
@@ -26,7 +26,7 @@ Globals.DriverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 # \ub77c\uc774\uc628\uc2a4 \ud14c\uc2a4\ud2b8 \uc11c\ubc84
 #Globals.Url=jdbc:sqlserver://kilc.mooo.com:1433;databaseName=lionstest
 # \uc6b4\uc601 \uc11c\ubc84
-Globals.Url=jdbc:sqlserver://bokjuri.iptime.org:1433;databaseName=bokjuri
+Globals.Url=jdbc:sqlserver://192.168.0.44:1433;databaseName=bokjuri
 
 # \uc6b4\uc601 \uc11c\ubc84
 Globals.UserName = bokjuri
